# datalog

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/engine/: Cargo.toml  build.rs
crates/engine/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
services/gateway/: go.mod  go.sum  main.go
web/: package-lock.json
