[workspace]
members = ["crates/engine", "crates/mcp-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Yogesh"]
license = "MIT"
repository = "https://github.com/noobyogi0010/datalog"

[workspace.dependencies]
# for async await - async engine
tokio = { version = "1.35", features = ["full"] }
# serialization - deserialization
serde = { version = "1.0", features = ["derive"] }
# serialize-deserialize to json
serde_json = "1.0"
# error handling - catch-all errs
anyhow = "1.0"
# custom error types
thiserror = "1.0"
# logging
tracing = "0.1"
# sink for tracing, it writes logs to stdout
tracing-subscriber = "0.3"
# convert protobuff from go server to rust struct
prost = "0.12
# grpc server/client frmwrk
tonic - "0.10"

[profile.release]
opt-level = 3