[package]
name = "datalog-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync", "rt] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.10"

[dev-dependencies]
