[package]
name = "datalog-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# mcp servers depend on engine!
datalog-engine = { path = "../engine" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[dev-dependencies]